--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ HOSTNAME=localhost
 PORT=3000
 DB_URL=mongodb://localhost:27017/mic-database
 SECRET=mic-site
+MONGODB_URI=mongodb+srv://migsbb:mmrr9S96mBFGYcv@mic-cluster.buqid.mongodb.net/mic-database?retryWrites=true&w=majority
